--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h3>WebGPU Fundamentals</h3>
-    <a href="pages/triangle/index.html">Triangle</a>
+    <p><a href="pages/triangle/index.html">Triangle</a></p>
+    <p><a href="pages/gpucompute/index.html">Computations on the GPU</a></p>
   </body>
 </html>
