--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h3>WebGPU Fundamentals</h3>
     <p><a href="pages/triangle/index.html">Triangle</a></p>
+    <p><a href="pages/triangle-rgb/index.html">Triangle RGB</a></p>
     <p><a href="pages/gpucompute/index.html">Computations on the GPU</a></p>
   </body>
 </html>
