--- a/pages/gpucompute/index.html
+++ b/pages/gpucompute/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/wgpu-icon-x64.png">
     <title>WebGPU Fundamentals</title>
     <link rel="stylesheet" href="../../style/index.css">
     <script type="module" src="index.ts" defer></script>
