--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="assets/images/wgpu-icon-x64.png">
     <title>WebGPU Fundamentals</title>
     <link rel="stylesheet" href="index.css">
     <script type="module" src="index.ts" defer></script>
@@ -8,6 +9,8 @@
     <h3>WebGPU Fundamentals</h3>
     <p><a href="pages/triangle/index.html">Triangle</a></p>
     <p><a href="pages/triangle-rgb/index.html">Triangle RGB</a></p>
+    <p><a href="pages/builtin-position/index.html">@builtin(position)</a></p>
     <p><a href="pages/gpucompute/index.html">Computations on the GPU</a></p>
+    <p><a href="pages/uniforms/index.html">Uniforms</a></p>  
   </body>
 </html>
