--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <p><a href="pages/triangle/index.html">Triangle</a></p>
     <p><a href="pages/triangle-rgb/index.html">Triangle RGB</a></p>
     <p><a href="pages/builtin-position/index.html">@builtin(position)</a></p>
+    <p><a href="pages/triangles/index.html">Triangles</a></p>
     <p><a href="pages/gpucompute/index.html">Computations on the GPU</a></p>
-    <p><a href="pages/uniforms/index.html">Uniforms</a></p>  
+    <p><a href="pages/uniforms/index.html">Uniforms</a></p>
   </body>
 </html>
